--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: demo cicd
+name: learn-github-actions
 on: [push]
 jobs:
   check-bats-version:
@@ -10,3 +10,5 @@ jobs:
           node-version: '14'
       - run: npm install -g bats
       - run: bats -v
+      - run: npm install -g pm2
+      - run: pm2 -v
