--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,4 @@ jobs:
       - run: npm install -g bats
       - run: bats -v
       - run: npm install -g pm2
-      - run: pm2 -v
+      - run: pm2 ls
