--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,12 @@ jobs:
       - run: npm install -g bats
       - run: bats -v
       - run: git --version
+    steps:
+  - name: Install SSH Key
+    uses: shimataro/ssh-key-action@v2
+    with:
+      key: ${{ secrets.SSH_PRIVATE_KEY }} 
+      known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+    steps:
+  - name: Adding Known Hosts
+    run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
