--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - run: npm install -g bats
       - run: bats -v
       - run: git --version
-    steps:
+   # steps:
       - name: Install SSH Key
       - uses: shimataro/ssh-key-action@v2
         with:
