--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,17 +4,13 @@ jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
-      - run: git --version
-   # steps:
-      - name: Install SSH Key
-      - uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }} 
-          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
-      - run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+  - name: Install SSH Key
+    uses: shimataro/ssh-key-action@v2
+    with:
+      key: ${{ secrets.SSH_PRIVATE_KEY }} 
+      known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+      
+    steps:
+  # ...
+  - name: Adding Known Hosts
+    run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
