--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
         host: 112.196.1.221
         username: ashoktest
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        script: whoami
+        script: pwd
